--- a/src/components/CaseTitle/CaseTitle.module.scss
+++ b/src/components/CaseTitle/CaseTitle.module.scss
@@ -12,7 +12,7 @@
 }
 
 .Title {
-  //font-family: GothamPro-Black;
+  font-family: GothamPro-Black;
   font-size: 150px;
   letter-spacing: 2px;
   margin: 0;
