--- a/src/components/CaseFilter/CaseFilter.module.scss
+++ b/src/components/CaseFilter/CaseFilter.module.scss
@@ -6,7 +6,7 @@
   color: #fff;
   font-size: 24px;
   margin: 0;
-  //font-family: GothamPro-Bold;
+  font-family: GothamPro-Bold;
 }
 
 .FilterContainer {
