--- a/src/components/CaseFilter/CaseFilter.module.scss
+++ b/src/components/CaseFilter/CaseFilter.module.scss
@@ -1,5 +1,13 @@
 .CasesFilter {
   width: 25%;
+
+  @media (max-width: 1350px) {
+    width: 50%;
+  }
+
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .FilterTitle {
@@ -13,12 +21,20 @@
   margin-top: 61px;
   display: inline-flex;
   flex-direction: column;
-  color:#fff
+  color:#fff;
 
+  @media (max-width: 600px) {
+    margin-top: 20px;
+  }
 }
 
 .Separator {
   width: 100%;
   padding: 13px;
   border-bottom: 2px solid #fff;
+
+  @media (max-width: 600px) {
+    padding: 6px;
+    border-bottom: 1px solid #fff;
+  }
 }
