--- a/src/components/CaseFilterItem/CaseFilterItem.module.scss
+++ b/src/components/CaseFilterItem/CaseFilterItem.module.scss
@@ -2,7 +2,12 @@
   color: #fff;
   font-size: 24px;
   cursor: pointer;
-  margin-bottom: 20px
+  margin-bottom: 20px;
+
+  @media (max-width: 768px){
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
 }
 
 .CaseFilterItemSelected {
