--- a/src/components/CaseTitle/CaseTitle.module.scss
+++ b/src/components/CaseTitle/CaseTitle.module.scss
@@ -3,6 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: 1150px) {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
 
 .Title {
@@ -11,6 +16,26 @@
   letter-spacing: 2px;
   margin: 0;
   color: #fff;
+
+  @media (max-width: 1470px) {
+    font-size: 120px;
+  }
+
+  @media (max-width: 1150px) {
+    align-self: flex-start;
+  }
+
+  @media (max-width: 1024px) {
+    font-size: 90px;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 70px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 38px;
+  }
 }
 
 .FiltersSwitcher {
@@ -18,6 +43,10 @@
   justify-content: flex-end;
   align-items: center;
   min-width: 360px;
+
+  @media (max-width: 1150px) {
+    align-self: flex-end;
+  }
 }
 
 .Cleaner {
@@ -27,6 +56,10 @@
   margin-bottom: 5px;
   margin-right: 20px;
   cursor: pointer;
+
+  @media (max-width: 600px) {
+    font-size: 18px;
+  }
 }
 
 .LeftSeparator {
@@ -34,6 +67,10 @@
   width: 35px;
   border: 1px solid #fb6542;
   margin-right: 20px;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .Rhomb {
@@ -45,6 +82,11 @@
   margin-right: 32px;
   cursor: pointer;
   transition: background-color border .3s;
+
+  @media (max-width: 600px) {
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .FiltersOpenRhomb {
@@ -61,6 +103,10 @@
   border: 1px solid #fff; 
   margin-right: 32px;
   transition: width .3s, margin-right 0.3s, border .3s;
+
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .RightSeparatorHidden {
@@ -74,6 +120,14 @@
   letter-spacing: .02em;
   font-size: 48px;
   cursor: pointer;
+
+  @media (max-width: 1470px) {
+    font-size: 40px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
+  }
 }
 
 .FilterOpenSwitcher {
