--- a/src/components/Cases/Cases.module.scss
+++ b/src/components/Cases/Cases.module.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   padding-top: 50px;
   gap: 30px;
+  margin: 0 auto;
+  max-width: 1350px;
 
   @media (max-width: 768px) {
     flex-direction: column;
