--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,36 +27,12 @@
   width: 100%;
 }
 
-.MainMenu {
-  display: flex;
-  gap: 32px;
-
-  @media (max-width: 850px) {
-    gap: 20px;
-  }
+.MenuContainer {
+  display: block;
 
   @media (max-width: 600px) {
     display: none;
   }
-}
-
-.MenuItem {
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 20px;
-  color: #fff;
-
-  @media (max-width: 850px) {
-    font-size: 16px;
-  }
-
-  &:hover {
-    color: #fb6542;
-  }
-}
-
-.Active {
-  color: #fb6542;
 }
 
 .BurgerContainer {
